src/sphinxdocrs/tests/snapshots/otherdocs__otherdocs__src_sphinx_doc__html_python_tree.snap
---
source: src/sphinxdocrs/tests/otherdocs.rs
expression: py_tree.clone()
---
- ".buildinfo"
- _downloads
- _downloads/1db87291c47cdf2a82cc635794bf6c44
- _downloads/1db87291c47cdf2a82cc635794bf6c44/example_google.py
- _downloads/78d4fe3529118e4daa37f326d15384f4
- _downloads/78d4fe3529118e4daa37f326d15384f4/message.pot.jinja
- _downloads/f3a25b842d7256a8ce8f8cb6cc6160a9
- _downloads/f3a25b842d7256a8ce8f8cb6cc6160a9/example_numpy.py
- _images
- _images/agogo.png
- _images/alabaster.png
- _images/bizstyle.png
- _images/classic.png
- _images/graphviz-339e3ad43e173f7c950f79bf4d41f82f906d2175.png
- _images/graphviz-339e3ad43e173f7c950f79bf4d41f82f906d2175.png.map
- _images/graphviz-8f41e3505b1f58d16c8c77a9ed7d9562fac30e74.png
- _images/graphviz-8f41e3505b1f58d16c8c77a9ed7d9562fac30e74.png.map
- _images/graphviz-e87ab1666a7685a706a5bed2a7744d43bb33cbd4.png
- _images/graphviz-e87ab1666a7685a706a5bed2a7744d43bb33cbd4.png.map
- _images/haiku.png
- _images/inheritance-a014b3e35c601d0641890df126db27c181074aed.png
- _images/inheritance-a014b3e35c601d0641890df126db27c181074aed.png.map
- _images/inheritance-da890d2a33b99fdbbfa01edd1c3f81440120ec53.png
- _images/inheritance-da890d2a33b99fdbbfa01edd1c3f81440120ec53.png.map
- _images/inheritance-db919451f4f8492c66ccf0e8784241ad72311b89.png
- _images/inheritance-db919451f4f8492c66ccf0e8784241ad72311b89.png.map
- _images/jupyter-logo.png
- _images/linux-logo.png
- _images/lumache-autosummary.png
- _images/lumache-first-light.png
- _images/lumache-furo.png
- _images/lumache-py-function-full.png
- _images/lumache-py-function.png
- _images/nature.png
- _images/pyramid.png
- _images/python-logo.png
- _images/scrolls.png
- _images/sphinxdoc.png
- _images/traditional.png
- _images/translation.svg
- _modules
- _modules/docutils
- _modules/docutils/parsers
- _modules/docutils/parsers/rst.html
- _modules/index.html
- _modules/sphinx
- _modules/sphinx/addnodes.html
- _modules/sphinx/application.html
- _modules/sphinx/builders
- _modules/sphinx/builders/changes.html
- _modules/sphinx/builders/dirhtml.html
- _modules/sphinx/builders/dummy.html
- _modules/sphinx/builders/epub3.html
- _modules/sphinx/builders/gettext.html
- _modules/sphinx/builders/html.html
- _modules/sphinx/builders/latex.html
- _modules/sphinx/builders/linkcheck.html
- _modules/sphinx/builders/manpage.html
- _modules/sphinx/builders/singlehtml.html
- _modules/sphinx/builders/texinfo.html
- _modules/sphinx/builders/text.html
- _modules/sphinx/builders/xml.html
- _modules/sphinx/builders.html
- _modules/sphinx/config.html
- _modules/sphinx/directives.html
- _modules/sphinx/domains
- _modules/sphinx/domains/_index.html
- _modules/sphinx/domains/python.html
- _modules/sphinx/domains.html
- _modules/sphinx/environment
- _modules/sphinx/environment/collectors.html
- _modules/sphinx/environment.html
- _modules/sphinx/errors.html
- _modules/sphinx/events.html
- _modules/sphinx/ext
- _modules/sphinx/ext/autodoc
- _modules/sphinx/ext/autodoc/_event_listeners.html
- _modules/sphinx/ext/coverage.html
- _modules/sphinx/ext/linkcode.html
- _modules/sphinx/locale.html
- _modules/sphinx/parsers.html
- _modules/sphinx/project.html
- _modules/sphinx/transforms
- _modules/sphinx/transforms/post_transforms
- _modules/sphinx/transforms/post_transforms/images.html
- _modules/sphinx/transforms/post_transforms.html
- _modules/sphinx/transforms.html
- _modules/sphinx/util
- _modules/sphinx/util/docutils.html
- _modules/sphinx/util/logging.html
- _modules/sphinx/util/parsing.html
- _modules/sphinx/util/typing.html
- _modules/sphinxcontrib
- _modules/sphinxcontrib/applehelp.html
- _modules/sphinxcontrib/devhelp.html
- _modules/sphinxcontrib/htmlhelp.html
- _modules/sphinxcontrib/qthelp.html
- _modules/sphinxcontrib/serializinghtml.html
- _modules/sphinxcontrib/websupport
- _modules/sphinxcontrib/websupport/core.html
- _modules/sphinxcontrib/websupport/search.html
- _modules/sphinxcontrib/websupport/storage.html
- _sources
- _sources/authors.rst.txt
- _sources/changes
- _sources/changes/0.1.rst.txt
- _sources/changes/0.2.rst.txt
- _sources/changes/0.3.rst.txt
- _sources/changes/0.4.rst.txt
- _sources/changes/0.5.rst.txt
- _sources/changes/0.6.rst.txt
- _sources/changes/1.0.rst.txt
- _sources/changes/1.1.rst.txt
- _sources/changes/1.2.rst.txt
- _sources/changes/1.3.rst.txt
- _sources/changes/1.4.rst.txt
- _sources/changes/1.5.rst.txt
- _sources/changes/1.6.rst.txt
- _sources/changes/1.7.rst.txt
- _sources/changes/1.8.rst.txt
- _sources/changes/2.0.rst.txt
- _sources/changes/2.1.rst.txt
- _sources/changes/2.2.rst.txt
- _sources/changes/2.3.rst.txt
- _sources/changes/2.4.rst.txt
- _sources/changes/3.0.rst.txt
- _sources/changes/3.1.rst.txt
- _sources/changes/3.2.rst.txt
- _sources/changes/3.3.rst.txt
- _sources/changes/3.4.rst.txt
- _sources/changes/3.5.rst.txt
- _sources/changes/4.0.rst.txt
- _sources/changes/4.1.rst.txt
- _sources/changes/4.2.rst.txt
- _sources/changes/4.3.rst.txt
- _sources/changes/4.4.rst.txt
- _sources/changes/4.5.rst.txt
- _sources/changes/5.0.rst.txt
- _sources/changes/5.1.rst.txt
- _sources/changes/5.2.rst.txt
- _sources/changes/5.3.rst.txt
- _sources/changes/6.0.rst.txt
- _sources/changes/6.1.rst.txt
- _sources/changes/6.2.rst.txt
- _sources/changes/7.0.rst.txt
- _sources/changes/7.1.rst.txt
- _sources/changes/7.2.rst.txt
- _sources/changes/7.3.rst.txt
- _sources/changes/7.4.rst.txt
- _sources/changes/8.0.rst.txt
- _sources/changes/8.1.rst.txt
- _sources/changes/8.2.rst.txt
- _sources/changes/9.0.rst.txt
- _sources/changes/index.rst.txt
- _sources/development
- _sources/development/howtos
- _sources/development/howtos/builders.rst.txt
- _sources/development/howtos/index.rst.txt
- _sources/development/howtos/setup_extension.rst.txt
- _sources/development/html_themes
- _sources/development/html_themes/index.rst.txt
- _sources/development/html_themes/templating.rst.txt
- _sources/development/index.rst.txt
- _sources/development/tutorials
- _sources/development/tutorials/adding_domain.rst.txt
- _sources/development/tutorials/autodoc_ext.rst.txt
- _sources/development/tutorials/examples
- _sources/development/tutorials/examples/README.rst.txt
- _sources/development/tutorials/extending_build.rst.txt
- _sources/development/tutorials/extending_syntax.rst.txt
- _sources/development/tutorials/index.rst.txt
- _sources/examples.rst.txt
- _sources/extdev
- _sources/extdev/appapi.rst.txt
- _sources/extdev/builderapi.rst.txt
- _sources/extdev/collectorapi.rst.txt
- _sources/extdev/deprecated.rst.txt
- _sources/extdev/domainapi.rst.txt
- _sources/extdev/envapi.rst.txt
- _sources/extdev/event_callbacks.rst.txt
- _sources/extdev/eventapi.rst.txt
- _sources/extdev/i18n.rst.txt
- _sources/extdev/index.rst.txt
- _sources/extdev/logging.rst.txt
- _sources/extdev/markupapi.rst.txt
- _sources/extdev/nodes.rst.txt
- _sources/extdev/parserapi.rst.txt
- _sources/extdev/projectapi.rst.txt
- _sources/extdev/testing.rst.txt
- _sources/extdev/utils.rst.txt
- _sources/faq.rst.txt
- _sources/glossary.rst.txt
- _sources/index.rst.txt
- _sources/internals
- _sources/internals/ai-policy.rst.txt
- _sources/internals/code-of-conduct.rst.txt
- _sources/internals/contributing.rst.txt
- _sources/internals/index.rst.txt
- _sources/internals/organization.rst.txt
- _sources/internals/release-process.rst.txt
- _sources/latex.rst.txt
- _sources/man
- _sources/man/index.rst.txt
- _sources/man/sphinx-apidoc.rst.txt
- _sources/man/sphinx-autogen.rst.txt
- _sources/man/sphinx-build.rst.txt
- _sources/man/sphinx-quickstart.rst.txt
- _sources/support.rst.txt
- _sources/tutorial
- _sources/tutorial/automatic-doc-generation.rst.txt
- _sources/tutorial/deploying.rst.txt
- _sources/tutorial/describing-code.rst.txt
- _sources/tutorial/end.rst.txt
- _sources/tutorial/first-steps.rst.txt
- _sources/tutorial/getting-started.rst.txt
- _sources/tutorial/index.rst.txt
- _sources/tutorial/more-sphinx-customization.rst.txt
- _sources/tutorial/narrative-documentation.rst.txt
- _sources/usage
- _sources/usage/advanced
- _sources/usage/advanced/intl.rst.txt
- _sources/usage/advanced/websupport
- _sources/usage/advanced/websupport/api.rst.txt
- _sources/usage/advanced/websupport/index.rst.txt
- _sources/usage/advanced/websupport/quickstart.rst.txt
- _sources/usage/advanced/websupport/searchadapters.rst.txt
- _sources/usage/advanced/websupport/storagebackends.rst.txt
- _sources/usage/builders
- _sources/usage/builders/index.rst.txt
- _sources/usage/configuration.rst.txt
- _sources/usage/domains
- _sources/usage/domains/c.rst.txt
- _sources/usage/domains/cpp.rst.txt
- _sources/usage/domains/index.rst.txt
- _sources/usage/domains/javascript.rst.txt
- _sources/usage/domains/mathematics.rst.txt
- _sources/usage/domains/python.rst.txt
- _sources/usage/domains/restructuredtext.rst.txt
- _sources/usage/domains/standard.rst.txt
- _sources/usage/extensions
- _sources/usage/extensions/apidoc.rst.txt
- _sources/usage/extensions/autodoc.rst.txt
- _sources/usage/extensions/autosectionlabel.rst.txt
- _sources/usage/extensions/autosummary.rst.txt
- _sources/usage/extensions/coverage.rst.txt
- _sources/usage/extensions/doctest.rst.txt
- _sources/usage/extensions/duration.rst.txt
- _sources/usage/extensions/example_google.rst.txt
- _sources/usage/extensions/example_numpy.rst.txt
- _sources/usage/extensions/extlinks.rst.txt
- _sources/usage/extensions/githubpages.rst.txt
- _sources/usage/extensions/graphviz.rst.txt
- _sources/usage/extensions/ifconfig.rst.txt
- _sources/usage/extensions/imgconverter.rst.txt
- _sources/usage/extensions/index.rst.txt
- _sources/usage/extensions/inheritance.rst.txt
- _sources/usage/extensions/intersphinx.rst.txt
- _sources/usage/extensions/linkcode.rst.txt
- _sources/usage/extensions/math.rst.txt
- _sources/usage/extensions/napoleon.rst.txt
- _sources/usage/extensions/todo.rst.txt
- _sources/usage/extensions/viewcode.rst.txt
- _sources/usage/index.rst.txt
- _sources/usage/installation.rst.txt
- _sources/usage/markdown.rst.txt
- _sources/usage/quickstart.rst.txt
- _sources/usage/referencing.rst.txt
- _sources/usage/restructuredtext
- _sources/usage/restructuredtext/basics.rst.txt
- _sources/usage/restructuredtext/directives.rst.txt
- _sources/usage/restructuredtext/domains.rst.txt
- _sources/usage/restructuredtext/field-lists.rst.txt
- _sources/usage/restructuredtext/index.rst.txt
- _sources/usage/restructuredtext/roles.rst.txt
- _sources/usage/theming.rst.txt
- _static
- _static/Makefile
- _static/base-stemmer.js
- _static/basic.css
- _static/bookcover.png
- _static/diagrams
- _static/diagrams/sphinx_build_flow.dot
- _static/diagrams/sphinx_build_phases.dot
- _static/diagrams/sphinx_core_events_flow.dot
- _static/doctools.js
- _static/documentation_options.js
- _static/english-stemmer.js
- _static/favicon.svg
- _static/file.png
- _static/graphviz.css
- _static/jupyter-logo.png
- _static/language_data.js
- _static/linux-logo.png
- _static/minus.png
- _static/opensearch.xml
- _static/plus.png
- _static/pygments.css
- _static/python-logo.png
- _static/searchtools.js
- _static/sphinx-logo.svg
- _static/sphinx.png
- _static/sphinx13.css
- _static/sphinx_highlight.js
- _static/themes
- _static/themes/agogo.png
- _static/themes/alabaster.png
- _static/themes/bizstyle.png
- _static/themes/classic.png
- _static/themes/fullsize
- _static/themes/fullsize/agogo.png
- _static/themes/fullsize/alabaster.png
- _static/themes/fullsize/bizstyle.png
- _static/themes/fullsize/classic.png
- _static/themes/fullsize/haiku.png
- _static/themes/fullsize/nature.png
- _static/themes/fullsize/pyramid.png
- _static/themes/fullsize/scrolls.png
- _static/themes/fullsize/sphinx_rtd_theme.png
- _static/themes/fullsize/sphinxdoc.png
- _static/themes/fullsize/traditional.png
- _static/themes/haiku.png
- _static/themes/nature.png
- _static/themes/pyramid.png
- _static/themes/scrolls.png
- _static/themes/sphinx_rtd_theme.png
- _static/themes/sphinxdoc.png
- _static/themes/traditional.png
- _static/translation.png
- _static/translation.puml
- _static/translation.svg
- _static/tutorial
- _static/tutorial/lumache-autosummary.png
- _static/tutorial/lumache-first-light.png
- _static/tutorial/lumache-furo.png
- _static/tutorial/lumache-py-function-full.png
- _static/tutorial/lumache-py-function.png
- authors.html
- changes
- changes/0.1.html
- changes/0.2.html
- changes/0.3.html
- changes/0.4.html
- changes/0.5.html
- changes/0.6.html
- changes/1.0.html
- changes/1.1.html
- changes/1.2.html
- changes/1.3.html
- changes/1.4.html
- changes/1.5.html
- changes/1.6.html
- changes/1.7.html
- changes/1.8.html
- changes/2.0.html
- changes/2.1.html
- changes/2.2.html
- changes/2.3.html
- changes/2.4.html
- changes/3.0.html
- changes/3.1.html
- changes/3.2.html
- changes/3.3.html
- changes/3.4.html
- changes/3.5.html
- changes/4.0.html
- changes/4.1.html
- changes/4.2.html
- changes/4.3.html
- changes/4.4.html
- changes/4.5.html
- changes/5.0.html
- changes/5.1.html
- changes/5.2.html
- changes/5.3.html
- changes/6.0.html
- changes/6.1.html
- changes/6.2.html
- changes/7.0.html
- changes/7.1.html
- changes/7.2.html
- changes/7.3.html
- changes/7.4.html
- changes/8.0.html
- changes/8.1.html
- changes/8.2.html
- changes/9.0.html
- changes/index.html
- changes.html
- contents.html
- development
- development/builders.html
- development/howtos
- development/howtos/builders.html
- development/howtos/index.html
- development/howtos/setup_extension.html
- development/html_themes
- development/html_themes/index.html
- development/html_themes/templating.html
- development/index.html
- development/overview.html
- development/templating.html
- development/theming.html
- development/tutorials
- development/tutorials/adding_domain.html
- development/tutorials/autodoc_ext.html
- development/tutorials/examples
- development/tutorials/examples/README.html
- development/tutorials/extending_build.html
- development/tutorials/extending_syntax.html
- development/tutorials/helloworld.html
- development/tutorials/index.html
- development/tutorials/recipe.html
- development/tutorials/todo.html
- examples.html
- extdev
- extdev/appapi.html
- extdev/builderapi.html
- extdev/collectorapi.html
- extdev/deprecated.html
- extdev/domainapi.html
- extdev/envapi.html
- extdev/event_callbacks.html
- extdev/eventapi.html
- extdev/i18n.html
- extdev/index.html
- extdev/logging.html
- extdev/markupapi.html
- extdev/nodes.html
- extdev/parserapi.html
- extdev/projectapi.html
- extdev/testing.html
- extdev/utils.html
- faq.html
- genindex.html
- glossary.html
- index.html
- internals
- internals/ai-policy.html
- internals/code-of-conduct.html
- internals/contributing.html
- internals/index.html
- internals/organization.html
- internals/release-process.html
- latex.html
- man
- man/index.html
- man/sphinx-apidoc.html
- man/sphinx-autogen.html
- man/sphinx-build.html
- man/sphinx-quickstart.html
- objects.inv
- py-modindex.html
- search.html
- searchindex.js
- support.html
- tutorial
- tutorial/automatic-doc-generation.html
- tutorial/deploying.html
- tutorial/describing-code.html
- tutorial/end.html
- tutorial/first-steps.html
- tutorial/getting-started.html
- tutorial/index.html
- tutorial/more-sphinx-customization.html
- tutorial/narrative-documentation.html
- usage
- usage/advanced
- usage/advanced/intl.html
- usage/advanced/websupport
- usage/advanced/websupport/api.html
- usage/advanced/websupport/index.html
- usage/advanced/websupport/quickstart.html
- usage/advanced/websupport/searchadapters.html
- usage/advanced/websupport/storagebackends.html
- usage/builders
- usage/builders/index.html
- usage/configuration.html
- usage/domains
- usage/domains/c.html
- usage/domains/cpp.html
- usage/domains/index.html
- usage/domains/javascript.html
- usage/domains/mathematics.html
- usage/domains/python.html
- usage/domains/restructuredtext.html
- usage/domains/standard.html
- usage/extensions
- usage/extensions/apidoc.html
- usage/extensions/autodoc.html
- usage/extensions/autosectionlabel.html
- usage/extensions/autosummary.html
- usage/extensions/coverage.html
- usage/extensions/doctest.html
- usage/extensions/duration.html
- usage/extensions/example_google.html
- usage/extensions/example_numpy.html
- usage/extensions/extlinks.html
- usage/extensions/githubpages.html
- usage/extensions/graphviz.html
- usage/extensions/ifconfig.html
- usage/extensions/imgconverter.html
- usage/extensions/index.html
- usage/extensions/inheritance.html
- usage/extensions/intersphinx.html
- usage/extensions/linkcode.html
- usage/extensions/math.html
- usage/extensions/napoleon.html
- usage/extensions/todo.html
- usage/extensions/viewcode.html
- usage/index.html
- usage/installation.html
- usage/markdown.html
- usage/quickstart.html
- usage/referencing.html
- usage/restructuredtext
- usage/restructuredtext/basics.html
- usage/restructuredtext/directives.html
- usage/restructuredtext/domains.html
- usage/restructuredtext/field-lists.html
- usage/restructuredtext/index.html
- usage/restructuredtext/roles.html
- usage/theming.html
